--- a/Schichtkalender-PWA/manifest.json
+++ b/Schichtkalender-PWA/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#f4f4f4",
-  "theme_color": "#0161FD",
+  "theme_color": "#FFFFFF",
   "icons": [
     {
       "src": "icons/icon-72x72.png",
