--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "display": "standalone",
   "background_color": "#f4f4f4",
   "theme_color": "#f4f4f4",
-  "icons": [
+  "ios": [
     {
       "src": "ios/16.png",
       "sizes": "16x16"
