--- a/Schichtkalender-PWA/manifest.json
+++ b/Schichtkalender-PWA/manifest.json
@@ -5,8 +5,8 @@
   "start_url": "./index.html",
   "display": "standalone",
   "orientation": "portrait",
-  "background_color": "#E50000",
-  "theme_color": "#E50000",
+  "background_color": "#0161FD",
+  "theme_color": "#0161FD",
   "icons": [
     {
       "src": "ios/16.png",
