--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
     "name": "Schichtkalender",
     "short_name": "Kalender",
-    "description": "Schichtkalender für Schicht 2 bei Motherson",
-    "start_url": "./index.html",
+    "description": "Ein Schichtkalender für Schicht 2.",
+    "start_url": "/",
     "display": "standalone",
-    "background_color": "#f4f4f4",
+    "background_color": "transparent",
+    "theme_color": "#007bff",
     "icons": [
         {
             "src": "ios/16.png",
