--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "description": "Ein Schichtkalender für Schicht 2.",
     "start_url": "/",
     "display": "standalone",
-    "background_color": "transparent",
+    "background_color": "#ffffff00",
     "theme_color": "#007bff",
     "icons": [
         {
