--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
     "description": "Schichtkalender Schicht 2",
     "start_url": "https://alexgett.github.io/Schichtkalender-pwa/",
     "display": "standalone",
-    "background_color": "#007bff",
-    "theme_color": "#ffffff00",
+    "background_color": "transparent",
+    "theme_color": "#f4f4f4",
     "icons": [
         {
             "src": "ios/16.png",
