--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "description": "Schichtkalender Schicht 2",
     "start_url": "https://alexgett.github.io/Schichtkalender-pwa/",
     "display": "standalone",
-    "background_color": "f4f4f4",
+    "background_color": "#f4f4f4",
     "theme_color": "#f4f4f4",
     "icons": [
         {
