--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
     "name": "Schichtkalender",
     "short_name": "Kalender",
-    "description": "Schichtkalender Schicht 2",
+    "description": "Ein Schichtkalender für Schicht 2.",
     "start_url": "https://alexgett.github.io/Schichtkalender-pwa/",
     "display": "standalone",
     "background_color": "#f4f4f4",
-    "theme_color": "transparent",
+    "theme_color": "#f4f4f4",
     "icons": [
         {
             "src": "ios/16.png",
