--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,10 @@
     "name": "Schichtkalender",
     "short_name": "Kalender",
     "description": "Ein Schichtkalender für Schicht 2.",
-    "start_url": "/",
+    "start_url": "./index.html",
     "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#007bff",
+    "background_color": "#f4f4f4",
+    "theme_color": "#f4f4f4",
     "icons": [
         {
             "src": "ios/16.png",
